# modeling-cascading-failure

./: ..gitignore.un~  .flake8  .gitignore  .gitignore~  ECE483Project.ipynb  ECE483Projectupdated.py  LICENSE  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: ECE483Project.ipynb  WECC case.ipynb  load WECC data.ipynb  test case.ipynb
notebooks/WECC_240_data/: 240busWECC_2018_PSS.dyr  readme.txt
notebooks/WECC_240_data_for_python/: PQ_x.csv  PV_x.csv  P_input.csv  Q_input.csv  V_abs.csv  V_phase.csv  Y.csv  x_slack.csv
notebooks/data/: pq30.csv  s14.csv  s30.csv
src/modeling_cascading_failure/: __about__.py  simulate.py  simulate2.0.py  solve.py
tests/: __init__.py  test_simulate.py  test_solve.py
tests/data/: Y14.csv  Y30.csv  pq14.csv  pv30.csv  v14.csv  v30.csv
